--- a/Task-2/style.css
+++ b/Task-2/style.css
@@ -1,117 +1,140 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-html {
     font-family: 'Poppins', sans-serif;
 }
 
 body {
-    display: grid;
-    place-items: center;
-    background-color: #0F0F1B;
-    color: #fff;
-}
-
-.header {
-    margin: 100px 515px 0px;
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.paragraf {
-    margin: 10px 165px 0;
-    font-size: 14px;
-    font-weight: 500;
+    color: #FFF;
+    background: #0F0F1B;
+    min-height: 100vh;
+    margin: 0 auto;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: repeat(3, 185px);
-    grid-template-rows: repeat(1, 185px);
-    gap: 30px;
-    margin-top: 50px;
-    border-radius: 10px;
-    padding: 20px 20px 20px 20px;
-    background: #171727;
-    text-align: center;
-
+    width: 100%;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.container .container-bar .bar-paragraf {
+.container h2 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.container p {
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 50px;
+}
+
+.container .grid-cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 30px;
+    position: relative;
+}
+
+.container .grid-cards .card {
+    width: 100%;
+    max-width: 185px;
+    border-radius: 10px;
+    padding: 20px;
+    background: #171727;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /* Eklendi */
+}
+
+.container .grid-cards .card h3 {
     font-size: 16px;
     font-weight: 500;
-    text-align: left;
+    margin-bottom: 5px;
 }
 
-.container .container-bar .bar-price {
+.container .grid-cards .card h2 {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.container .grid-cards .card p {
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.container .grid-cards .footer a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.container .grid-cards .active {
+    background: #242486;
+}
+
+.container .grid-cards .active p {
     margin-top: 10px;
     font-size: 18px;
     font-weight: 600;
-    text-align: left;
 }
 
-.container .container-bar .bar-comment {
-    font-size: 12px;
-    font-weight: 300;
-    margin-top: 5px;
-    text-align: left;
-}
-
-.get-started-btn {
-    position: relative;
-    padding: 10px 30px 10px 20px; 
-    border: none;
-    background-color: transparent;
-    color: white; 
-    font-size: 16px;
-    cursor: pointer;
-    transition: color 0.3s ease-in-out; 
-    margin-bottom: 5px; 
-}
-
-.icon-img {
-    position: absolute;
-    top: 50%;
-    right: 5px; 
-    transform: translateY(-50%);
-}
-
-.container {
-    position: relative;
-}
-
-.container input[type="text"] {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transform: translate(-100%, 100%);
-}
-
-.custom-button {
-    margin-top: 30px;
-    border-radius: 10px;
+/* Before pseudo-element stil tanımı */
+.container .grid-cards .card:nth-child(2)::before {
+    content: "Best Price";
+    color: #171727;
+    font-size: 10px;
+    font-weight: 400;
+    display: block;
+    padding: 4px 8px;
+    border-radius: 20px;
     border: 1px solid #69699A;
-    background: rgba(217, 217, 217, 0.00);
-    width: 95px;
-    height: 50px;
+    background: #A0E0B2;
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+
+.container button {
+    margin-top: 30px;
     color: #69699A;
     font-size: 12px;
     font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid #69699A;
+    background: rgba(217, 217, 217, 0.00);
+}
+
+.container button:hover{
+    background: #69699A;
+    color: #FFF;
     cursor: pointer;
-    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
-  }
-  
-  .custom-button:hover {
-    background-color: #D9D9D9;
-    color: #333333;
-    border-color: #D9D9D9;
-  }
-  
+    transition: 0.5s;
+    border: 1px solid #69699A;
+
+}
+
+.container img:hover{
+    transform: scale(1.2);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.container .footer{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
